--- a/src/pug/mixins/Variables.pug
+++ b/src/pug/mixins/Variables.pug
@@ -12,22 +12,95 @@ append variables
   - 
     var data = [
       {
-        title: 'Dtox',
-        link: 'https://themewagon.com/themes/dtox-free-bootstrap-4-html5-landing-page-template/',
-        preview: 'https://technext.github.io/dtox/index.html#team',
-        img: 'img11.png',
-        item: 'landing',
-        category: 'landing Page'
+      title: 'Phoenix',
+      link: 'https://themewagon.com/themes/phoenix-admin-dashboard-webapp-template/',
+      preview: 'https://prium.github.io/phoenix/v1.0.0/index.html',
+      img: 'img001.png',
+      item: 'admin',
+      category: 'Admin & DashBoard'
       },
-
       {
-        title: 'Makan',
-        link: 'https://themewagon.com/themes/makan-free-responsive-bootstrap-5-html5-business-website-template/',
-        preview: 'https://technext.github.io/makan/',
-        img: 'img02.png',
-        item: 'business',
-        category: 'Business'
+      title: 'Elaadmin',
+      link: 'https://themewagon.com/themes/free-responsive-bootstrap-4-html5-admin-dashboard-template-elaadmin/',
+      preview: 'https://technext.github.io/elaadmin/index.html',
+      img: 'img12.png',
+      item: 'admin',
+      category: 'Admin & DashBoard'
       },
+      {
+      title: 'AppLab',
+      link: 'https://themewagon.com/themes/free-responsive-bootstrap-5-html5-multipurpose-landing-page-template-applab/',
+      preview: 'https://technext.github.io/applab_2/v1.0.0/',
+      img: 'img10.png',
+      item: 'multipurpose ',
+      category: 'Multipurpose '
+      },
+      {
+      title: 'Jadoo',
+      link: 'https://themewagon.com/themes/free-bootstrap-5-html5-travel-agency-website-template-jadoo/',
+      preview: 'https://technext.github.io/jadoo/v1.0.0/index.html',
+      img: 'img05.png',
+      item: 'travel',
+      category: 'Travel & Booking'
+      },
+      {
+      title: 'LaslesVPN',
+      link: 'https://themewagon.com/themes/free-bootstrap-5-html5-multipurpose-website-template-laslesvpn/',
+      preview: 'https://technext.github.io/karma/index.html',
+      img: 'img07.png',
+      item: 'multipurpose ',
+      category: 'Multipurpose '
+      },
+      {
+      title: 'Purple Admin',
+      link: 'https://themewagon.com/themes/free-bootstrap-4-admin-dashboard-purple-admin/',
+      preview: 'https://www.bootstrapdash.com/demo/purple-admin-free/',
+      img: 'img16.png',
+      item: 'admin',
+      category: 'Admin & DashBoard'
+    },
+      {
+        title: 'FoodWagon ',
+        link: 'https://themewagon.com/themes/free-bootstrap-5-html5-restaurant-food-website-template-foodwagon/',
+        preview: 'https://technext.github.io/foodwagon/v1.0.0/index.html',
+        img: 'img002.png',
+        item: 'food',
+        category: 'Food & Restaurant'
+    }, 
+      {
+        title: 'Eshopper',
+        link: 'https://themewagon.com/themes/eshopper-free-responsive-bootstrap-4-e-commerce-website-template/',
+        preview: 'https://technext.github.io/eshopper/index.html',
+        img: 'img003.png',
+        item: 'ecommerce',
+        category: 'E-commerce'
+    },
+      {
+        title: 'Sneat',
+        link: 'https://demos.themeselection.com/sneat-bootstrap-html-admin-template-free/html/',
+        preview: 'https://demos.themeselection.com/sneat-bootstrap-html-admin-template-free/html/',
+        img: 'img73.png',
+        item: 'admin',
+        category: 'Admin & Dashboard'
+    },
+      {
+      title: 'Skydash',
+      link: 'https://themewagon.com/themes/free-bootstrap-4-html-5-admin-dashboard-website-template-skydash/',
+      preview: 'https://technext.github.io/skydash/',
+      img: 'img55.png',
+      item: 'admin',
+      category: 'Admin & Dashboard'
+    },
+      {
+        title: 'Little Squirrel',
+        link: 'https://themewagon.com/themes/free-bootstrap-5-html-5-education-website-template-little-squirrel/',
+        preview: 'https://technext.github.io/little-squirrel/v1.0.0/index.html',
+        img: 'img23.png',
+        item: 'other',
+        category: 'other'
+    },
+
+
       {
         title: 'Zay Shop',
         link: 'https://themewagon.com/themes/free-bootstrap-5-html-5-ecommerce-website-template-zay-shop/',
@@ -44,14 +117,7 @@ append variables
         item: 'multipurpose ',
         category: 'Multipurpose '
       },
-      {
-        title: 'Jadoo',
-        link: 'https://themewagon.com/themes/free-bootstrap-5-html5-travel-agency-website-template-jadoo/',
-        preview: 'https://technext.github.io/jadoo/v1.0.0/index.html',
-        img: 'img05.png',
-        item: 'travel',
-        category: 'Travel & Booking'
-      },
+
       {
         title: 'Karma',
         link: 'https://themewagon.com/themes/free-reponsive-bootstrap-4-html5-ecommerce-website-template-karma/',
@@ -60,14 +126,7 @@ append variables
         item: 'ecommerce',
         category: 'E-commerce'
       },
-      {
-        title: 'LaslesVPN',
-        link: 'https://themewagon.com/themes/free-bootstrap-5-html5-multipurpose-website-template-laslesvpn/',
-        preview: 'https://technext.github.io/karma/index.html',
-        img: 'img07.png',
-        item: 'multipurpose ',
-        category: 'Multipurpose '
-      },
+
       {
         title: 'Original ',
         link: 'https://themewagon.com/themes/free-bootstrap-blog-website-template-original/',
@@ -84,23 +143,8 @@ append variables
         item: 'ecommerce',
         category: 'E-commerce'
       },
-      {
-        title: 'AppLab',
-        link: 'https://themewagon.com/themes/free-responsive-bootstrap-5-html5-multipurpose-landing-page-template-applab/',
-        preview: 'https://technext.github.io/applab_2/v1.0.0/',
-        img: 'img10.png',
-        item: 'multipurpose ',
-        category: 'Multipurpose '
-      },
 
-      {
-        title: 'Elaadmin',
-        link: 'https://themewagon.com/themes/free-responsive-bootstrap-4-html5-admin-dashboard-template-elaadmin/',
-        preview: 'https://technext.github.io/elaadmin/index.html',
-        img: 'img12.png',
-        item: 'admin',
-        category: 'Admin & DashBoard'
-      },
+
       {
         title: 'SeoGram ',
         link: 'https://themewagon.com/themes/seogram-free-multipage-bootstrap-4-landing-page-website-template/',
@@ -110,12 +154,12 @@ append variables
         category: 'Landing Page'
       },
       {
-        title: 'JohnDoe',
-        link: 'https://themewagon.com/themes/johndoe-free-one-page-portfolio-website-template/',
-        preview: 'https://technext.github.io/JohnDoe/',
+        title: 'CakeZone',
+        link: 'https://themewagon.com/themes/free-bootstrap-5-html5-cake-shop-website-template-cakezone/',
+        preview: 'https://technext.github.io/cakezone/',
         img: 'img14.png',
-        item: 'portfolio',
-        category: 'Portfolio'
+        item: 'landing',
+        category: 'Landing Page'
       },
       {
         title: 'EcoHosting ',
@@ -124,14 +168,6 @@ append variables
         img: 'img15.png',
         item: 'other',
         category: 'Other'
-      },
-      {
-        title: 'Purple Admin',
-        link: 'https://themewagon.com/themes/free-bootstrap-4-admin-dashboard-purple-admin/',
-        preview: 'https://www.bootstrapdash.com/demo/purple-admin-free/',
-        img: 'img16.png',
-        item: 'admin',
-        category: 'Admin & DashBoard'
       },
       {
         title: 'FoodeiBlog',
@@ -181,14 +217,7 @@ append variables
         item: 'landing',
         category: 'Landing Page'
       },
-      {
-        title: 'Little Squirrel',
-        link: 'https://themewagon.com/themes/free-bootstrap-5-html-5-education-website-template-little-squirrel/',
-        preview: 'https://technext.github.io/little-squirrel/v1.0.0/index.html',
-        img: 'img23.png',
-        item: 'other',
-        category: 'other'
-      },
+
       {
         title: 'Neat',
         link: 'https://themewagon.com/themes/download-free-responsive-html5-portfolio-template-neat/',
@@ -427,14 +456,7 @@ append variables
         category: 'Game & Anime'
       },
 
-      {
-        title: 'Original ',
-        link: 'https://themewagon.com/themes/free-bootstrap-blog-website-template-original/',
-        preview: 'https://technext.github.io/original/',
-        img: 'img52.png',
-        item: 'personal',
-        category: 'Personal'
-      },
+
       {
         title: 'Karl',
         link: 'https://themewagon.com/themes/free-html5-responsive-ecommerce-template/',
@@ -454,29 +476,14 @@ append variables
       },
 
       {
-        title: 'Skydash',
-        link: 'https://themewagon.com/themes/free-bootstrap-4-html-5-admin-dashboard-website-template-skydash/',
-        preview: 'https://technext.github.io/skydash/',
-        img: 'img55.png',
-        item: 'admin',
-        category: 'Admin & Dashboard'
-      },
-      {
-        title: 'Trekking',
-        link: 'https://themewagon.com/themes/free-html5-responsive-template-multipage/',
-        preview: 'https://technext.github.io/trekking/',
+        title: 'Violet ',
+        link: 'https://themewagon.com/themes/free-bootstrap-4-html5-responsive-ecommerce-website-template-violet/',
+        preview: 'https://technext.github.io/violet/index.html',
         img: 'img56.png',
-        item: 'personal',
-        category: 'Personal'
+        item: 'ecommerce',
+        category: 'E-commerce'
       },
-      {
-        title: 'Cassi',
-        link: 'https://themewagon.com/themes/free-bootstrap-4-html5-responsive-photography-website-template-cassi/',
-        preview: 'https://technext.github.io/cassi/index.html',
-        img: 'img57.png',
-        item: 'photography',
-        category: 'Photography'
-      },
+
       {
         title: 'Ensurance',
         link: 'https://themewagon.com/themes/ensurance-free-responsive-bootstrap-5-healthcare-website-template/',
@@ -581,6 +588,15 @@ append variables
         item: 'medical',
         category: 'Medical & Health'
       },
+
+      {
+        title: 'Makan',
+        link: 'https://themewagon.com/themes/makan-free-responsive-bootstrap-5-html5-business-website-template/',
+        preview: 'https://technext.github.io/makan/',
+        img: 'img02.png',
+        item: 'business',
+        category: 'Business'
+      },
       {
         title: 'Yavin',
         link: 'https://themewagon.com/themes/free-bootstrap-5-html-5-business-website-template-yavin/',
@@ -594,14 +610,6 @@ append variables
         link: 'https://themewagon.com/themes/free-bootstrap-5-html-5-admin-dashboard-template-soft-ui/',
         preview: 'https://demos.creative-tim.com/soft-ui-dashboard/pages/dashboard.html',
         img: 'img72.png',
-        item: 'admin',
-        category: 'Admin & Dashboard'
-      },
-      {
-        title: 'Sneat',
-        link: 'https://demos.themeselection.com/sneat-bootstrap-html-admin-template-free/html/',
-        preview: 'https://demos.themeselection.com/sneat-bootstrap-html-admin-template-free/html/',
-        img: 'img73.png',
         item: 'admin',
         category: 'Admin & Dashboard'
       },
