--- a/src/pug/mixins/common/PreFooter.pug
+++ b/src/pug/mixins/common/PreFooter.pug
@@ -30,7 +30,7 @@ mixin PreFooter
   +Section(gradient,"container-fluid").py-0
     +Background(footerbackground)
     +Background(footerframe)
-    .container.text-center.pt-10.z-index-1
+    .container.text-center.pt-10.z-index-1.pb-3
       h1.mb-4.fw-bold.text-white.fs-10 Ready to get started?
       p.text-white.fw-medium 
         |HTML5 Template Collection 2022
