--- a/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/src/pug/mixins/home/landing/HeroHeader.pug
@@ -24,9 +24,9 @@ append variables
 mixin HeroHeader
   +Section(gradient,"container-fluid ").py-0.overflow-hidden
     +Background(background)
-      .container.overflow-hidden.text-center.py-9.z-index-1
-        img(src=`${CWD}assets/img/hero/final.png`  alt="Feature").mb-4.mt-6
-        p.text-white.fw-medium 
+      .container.overflow-hidden.text-center.pt-9.pb-10.z-index-1
+        img(src=`${CWD}assets/img/hero/final.png`  alt="" width="250").mb-4
+        p.text-white.fw-semi-bold.fs-4
           |HTML5 Template Collection 2022
           br
           |One Hundred Pre-build website
