--- a/src/pug/mixins/common/ItemCard.pug
+++ b/src/pug/mixins/common/ItemCard.pug
@@ -2,7 +2,7 @@ mixin ItemCard(props)
 
   .card.mb-2.bg-white.card-showcase
     .card-body.text-center
-      h4.card-title.fw-bold.text-primary.mb-0=props.title
+      h4.card-title.fw-bold.text-success.mb-0=props.title
       .card-text.text-dark=props.category  
     img.card-img-bottom(src=`${CWD}assets/img/template/${props.img}`  alt="Feature")
 
