--- a/showcase/src/pug/mixins/common/PreFooter.pug
+++ b/showcase/src/pug/mixins/common/PreFooter.pug
@@ -32,10 +32,8 @@ mixin PreFooter
     +Background(footerframe)
     .container.text-center.pt-10.z-index-1.pb-3
       h1.mb-4.fw-bold.text-white.fs-10 Ready to get started?
-      p.text-white.fw-medium 
-        |HTML5 Template Collection 2022
-        br
-        |One Hundred Pre-build website
+      p.text-white.fw-medium.fs-3
+        |Get the entire collection in your inbox
 
       a.text-black.btn.btn-info.mt-2.mt-lg-5.mb-5
         i.fas.fa-download.me-3
