--- a/showcase/src/pug/mixins/common/PreFooter.pug
+++ b/showcase/src/pug/mixins/common/PreFooter.pug
@@ -31,7 +31,7 @@ mixin PreFooter
     +Background(footerbackground)
     +Background(footerframe)
     .container.text-center.pt-10.z-index-1.pb-3
-      h1.mb-4.fw-bold.text-white.fs-10 Ready to get started?
+      h1.fw-bold.text-white.fs-10 Ready to get started?
       p.text-white.fw-medium.fs-3
         |Get the entire collection in your inbox
 
