--- a/showcase/src/pug/mixins/common/PreFooter.pug
+++ b/showcase/src/pug/mixins/common/PreFooter.pug
@@ -27,7 +27,7 @@ append variables
 
 
 mixin PreFooter
-  +Section(gradient,"container-fluid").py-0
+  +Section("container-fluid").py-0.bg-header-gradient
     +Background(footerbackground)
     +Background(footerframe)
     .container.text-center.pt-10.z-index-1.pb-3
