--- a/showcase/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/showcase/src/pug/mixins/home/landing/HeroHeader.pug
@@ -1,12 +1,5 @@
 append variables 
   -
-    var gradient={
-      "className":" bottom-0",
-
-      attrs:{
-        style:'background-image:linear-gradient(90deg, #0d2974 -11.17%, #3498db 110.39%);' 
-      }
-    }
     var background={
       "className":" bottom-0",
         "image":`${CWD}assets/img/hero/background.png`,
@@ -22,21 +15,20 @@ append variables
     }
 
 mixin HeroHeader
-  +Section(gradient,"container-fluid ").py-0.overflow-hidden
-    +Background(background)
-      .container.overflow-hidden.text-center.pt-9.pb-10.z-index-1
-        img(src=`${CWD}assets/img/hero/final.png`  alt="" width="250").mb-4
-        p.text-white.fw-semi-bold.fs-4
-          |HTML5 Template Collection 2022
-          br
-          |One Hundred Pre-build website
+  +Section(background,"px-0").py-0.bg-header-gradient.pb-10.pt-9
+    .container.text-center.z-index-1
+      img(src=`${CWD}assets/img/hero/final.png`  alt="" width="250").mb-4
+      p.text-white.fw-semi-bold.fs-4
+        |HTML5 Template Collection 2022
+        br
+        |One Hundred Pre-build website
 
-        a.text-black.btn.btn-info.mt-2.mt-lg-5.mb-5
-          i.fas.fa-download.me-3
-          |Download Free
+      a.text-black.btn.btn-info.mt-2.mt-lg-5.mb-5
+        i.fas.fa-download.me-3
+        |Download Free
 
-    .wave.mx-n3.overflow-hidden.mt-n9
-      svg(width="103%" height="100%" viewBox="0 0 1440 120" fill="none" xmlns="http://www.w3.org/2000/svg" )
+    .z-index-1.w-100.position-absolute.bottom-0
+      svg(width="100%" height="100%" viewBox="0 0 1440 120" fill="none" xmlns="http://www.w3.org/2000/svg" )
         g(clip-path="url(#clip0_6_331)")
           path(d="M4.07891 25.6305C708.541 -92.0278 936.529 246.24 1923.98 25.6305C1951.03 19.5861 1923.98 134 1923.98 134H4.07891C4.07891 134 -23.0986 30.1697 4.07891 25.6305Z" fill="url(#paint0_linear_6_331)")
           path(d="M-7.84653 76.3018C700.964 6.05803 930.359 208.009 1923.9 76.3018C1951.12 72.6932 1923.9 141 1923.9 141H-7.84653C-7.84653 141 -35.1918 79.0117 -7.84653 76.3018Z" fill="white")
