--- a/showcase/src/pug/mixins/common/PreFooter.pug
+++ b/showcase/src/pug/mixins/common/PreFooter.pug
@@ -35,7 +35,7 @@ mixin PreFooter
       p.text-white.fw-medium.fs-3
         |Get the entire collection in your inbox
 
-      a.text-black.btn.btn-info.mt-2.mt-lg-5.mb-5
+      a.text-white.btn.btn-success.mt-2.mt-lg-5.mb-5
         i.fas.fa-download.me-3
         |Download Free
       p.mb-0.text-white.mt-6.fs--1
