--- a/showcase/src/pug/mixins/navbars/NavbarShowcase.pug
+++ b/showcase/src/pug/mixins/navbars/NavbarShowcase.pug
@@ -30,6 +30,6 @@ mixin NavbarShowcase
       li.nav-item(data-nav-item data-more-item).dropdown
         a.nav-link.dropdown-toggle.fw-medium(href="javascript: void(0)" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false") More
         .dropdown-menu.dropdown-menu-end.category-list(aria-labelledby="navbarDropdown" data-category-list)
-  a.back-to-top.bg-info(href="#" data-back-to-top)
+  a.back-to-top.bg-success(href="#" data-back-to-top)
     i.fas.fa-angle-double-up 
 
