--- a/showcase/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/showcase/src/pug/mixins/home/landing/HeroHeader.pug
@@ -23,24 +23,42 @@ mixin HeroHeader
         br
         |One Hundred Pre-build website
 
-      a.text-black.btn.btn-info.mt-2.mt-lg-5.mb-5
+      a.text-white.btn.btn-success.mt-2.mt-lg-5.mb-5
         i.fas.fa-download.me-3
         |Download Free
 
     .z-index-1.w-100.position-absolute.bottom-0
-      svg(width="100%" height="100%" viewBox="0 0 1440 120" fill="none" xmlns="http://www.w3.org/2000/svg" )
-        g(clip-path="url(#clip0_6_331)")
-          path(d="M4.07891 25.6305C708.541 -92.0278 936.529 246.24 1923.98 25.6305C1951.03 19.5861 1923.98 134 1923.98 134H4.07891C4.07891 134 -23.0986 30.1697 4.07891 25.6305Z" fill="url(#paint0_linear_6_331)")
+      svg(xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 1920 141" fill="none" )
+        g(clip-path="url(#clip0_223_855)")
+          path( d="M-0.999896 26.5C703.462 -91.1583 936.529 246.24 1923.98 25.6305C1951.03 19.5861 1923.98 134 1923.98 134H4.07897C4.07897 134 -28.1774 31.0392 -0.999896 26.5Z" fill="url(#paint0_linear_223_855)")
           path(d="M-7.84653 76.3018C700.964 6.05803 930.359 208.009 1923.9 76.3018C1951.12 72.6932 1923.9 141 1923.9 141H-7.84653C-7.84653 141 -35.1918 79.0117 -7.84653 76.3018Z" fill="white")
         defs
-          linearGradient(id="paint0_linear_6_331" x1="-8" y1="0" x2="1936" y2="0" gradientUnits="userSpaceOnUse")
-            stop(stop-color="#2169FC")
-            stop( offset="1" stop-color="#62FFFF")
-          clipPath (id="clip0_6_331")
-            rect( width="100%" height="100%" fill="white")
+          linearGradient(id="paint0_linear_223_855" x1="-12" y1="0.000468637" x2="1916" y2="0.000468637" gradientUnits="userSpaceOnUse")
+            stop(stop-color="#332D77")
+            stop( offset="0.317984" stop-color="#554CB3")
+            stop(offset="1" stop-color="#4A4A7F")
+          clipPath(id="clip0_223_855")
+            rect( width="1920" height="141" fill="white")
 
 
 
+
+      //- <svg xmlns="http://www.w3.org/2000/svg" width="1920" height="141" viewBox="0 0 1920 141" fill="none">
+      //- <g clip-path="url(#clip0_223_855)">
+      //- <path d="M-0.999896 26.5C703.462 -91.1583 936.529 246.24 1923.98 25.6305C1951.03 19.5861 1923.98 134 1923.98 134H4.07897C4.07897 134 -28.1774 31.0392 -0.999896 26.5Z" fill="url(#paint0_linear_223_855)"/>
+      //- <path d="M-7.84653 76.3018C700.964 6.05803 930.359 208.009 1923.9 76.3018C1951.12 72.6932 1923.9 141 1923.9 141H-7.84653C-7.84653 141 -35.1918 79.0117 -7.84653 76.3018Z" fill="white"/>
+      //- </g>
+      //- <defs>
+      //- <linearGradient id="paint0_linear_223_855" x1="-12" y1="0.000468637" x2="1916" y2="0.000468637" gradientUnits="userSpaceOnUse">
+      //- <stop stop-color="#332D77"/>
+      //- <stop offset="0.317984" stop-color="#554CB3"/>
+      //- <stop offset="1" stop-color="#4A4A7F"/>
+      //- </linearGradient>
+      //- <clipPath id="clip0_223_855">
+      //- <rect width="1920" height="141" fill="white"/>
+      //- </clipPath>
+      //- </defs>
+      //- </svg>
 
 
 
