--- a/showcase/src/scss/theme/_heroHeader.scss
+++ b/showcase/src/scss/theme/_heroHeader.scss
@@ -1,3 +1,3 @@
 .bg-header-gradient {
-	background-image: linear-gradient(90deg, #0d2974 -11.17%, #3498db 110.39%);
+	background-image: linear-gradient(90.26deg, #0f0c29 0.23%, #302b63 47.42%, #24243e 99.79%);
 }
