--- a/showcase/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/showcase/src/pug/mixins/home/landing/HeroHeader.pug
@@ -17,13 +17,12 @@ append variables
 mixin HeroHeader
   +Section(background,"px-0").py-0.bg-header-gradient.pb-10.pt-9
     .container.text-center.z-index-1
-      img(src=`${CWD}assets/img/hero/final.png`  alt="" width="250").mb-4
-      p.text-white.fw-semi-bold.fs-4
+      img(src=`${CWD}assets/img/hero/final.png`  alt="" ).mb-5
+      h2.text-300.fw-semi-bold.fs-1.mb-1
         |HTML5 Template Collection 2022
-        br
-        |One Hundred Pre-build website
-
-      a.text-white.btn.btn-success.mt-2.mt-lg-5.mb-5
+      h2.text-white.fw-bold.fs-5.mb-0
+        |100 Pre-build Websites
+      a.text-white.btn.btn-success.mt-1.mt-md-3.mb-5
         i.fas.fa-download.me-3
         |Download Free
 
@@ -39,26 +38,5 @@ mixin HeroHeader
             stop(offset="1" stop-color="#4A4A7F")
           clipPath(id="clip0_223_855")
             rect( width="1920" height="141" fill="white")
-
-
-
-
-      //- <svg xmlns="http://www.w3.org/2000/svg" width="1920" height="141" viewBox="0 0 1920 141" fill="none">
-      //- <g clip-path="url(#clip0_223_855)">
-      //- <path d="M-0.999896 26.5C703.462 -91.1583 936.529 246.24 1923.98 25.6305C1951.03 19.5861 1923.98 134 1923.98 134H4.07897C4.07897 134 -28.1774 31.0392 -0.999896 26.5Z" fill="url(#paint0_linear_223_855)"/>
-      //- <path d="M-7.84653 76.3018C700.964 6.05803 930.359 208.009 1923.9 76.3018C1951.12 72.6932 1923.9 141 1923.9 141H-7.84653C-7.84653 141 -35.1918 79.0117 -7.84653 76.3018Z" fill="white"/>
-      //- </g>
-      //- <defs>
-      //- <linearGradient id="paint0_linear_223_855" x1="-12" y1="0.000468637" x2="1916" y2="0.000468637" gradientUnits="userSpaceOnUse">
-      //- <stop stop-color="#332D77"/>
-      //- <stop offset="0.317984" stop-color="#554CB3"/>
-      //- <stop offset="1" stop-color="#4A4A7F"/>
-      //- </linearGradient>
-      //- <clipPath id="clip0_223_855">
-      //- <rect width="1920" height="141" fill="white"/>
-      //- </clipPath>
-      //- </defs>
-      //- </svg>
-
 
 
