--- a/showcase/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/showcase/src/pug/mixins/home/landing/HeroHeader.pug
@@ -17,12 +17,12 @@ append variables
 mixin HeroHeader
   +Section(background,"px-0").py-0.bg-header-gradient.pb-10.pt-9
     .container.text-center.z-index-1
-      img(src=`${CWD}assets/img/hero/final.png`  alt="" ).mb-5
-      h2.text-300.fw-semi-bold.fs-1.mb-1
+      img(src=`${CWD}assets/img/hero/final.png`  alt="" ).mb-7
+      h2.text-300.fw-semi-bold.fs-2.mb-1
         |HTML5 Template Collection 2022
       h2.text-white.fw-bold.fs-5.mb-0
         |100 Pre-build Websites
-      a.text-white.btn.btn-success.mt-1.mt-md-3.mb-5
+      a.text-white.btn.btn-success.mt-3.mb-5
         i.fas.fa-download.me-3
         |Download Free
 
