--- a/showcase/src/pug/mixins/common/ItemCard.pug
+++ b/showcase/src/pug/mixins/common/ItemCard.pug
@@ -1,8 +1,7 @@
 mixin ItemCard(props)
 
-  .card.mb-2.bg-white.card-showcase
-    .card-body.text-center
-      h4.card-title.fw-bold.text-success.mb-0=props.title
-      .card-text.text-dark=props.category  
+  .card.mb-2.bg-white.card-showcase.text-center
+    h5.card-title.fw-bold.text-success.mb-0.mt-3=props.title
+    p.card-text.text-dark=props.category 
     img.card-img-bottom(src=`${CWD}assets/img/template/${props.img}`  alt="Feature")
 
