--- a/showcase/src/pug/mixins/Variables.pug
+++ b/showcase/src/pug/mixins/Variables.pug
@@ -231,8 +231,8 @@ append variables
         link: 'https://themewagon.com/themes/free-bootstrap-4-html5-law-firm-website-template-ariclaw/',
         preview: 'https://technext.github.io/ariclaw/index.html',
         img: 'img25.png',
-        item: 'law',
-        category: 'Law Firm'
+        item: 'other',
+        category: 'other'
       },
       {
         title: 'Eventalk',
@@ -255,7 +255,7 @@ append variables
         link: 'https://themewagon.com/themes/tournest-free-responsive-travel-website-template/',
         preview: 'https://technext.github.io/tournest/',
         img: 'img28.png',
-        item: 'agency',
+        item: 'travel',
         category: 'Travel Agency'
       },
       {
@@ -497,8 +497,8 @@ append variables
         link: 'https://themewagon.com/themes/dgital-free-responsive-bootstrap-5-creative-agency-template/',
         preview: 'https://technext.github.io/digital-1/',
         img: 'img59.png',
-        item: 'agency',
-        category: 'Agency'
+        item: 'other',
+        category: 'other'
       },
       {
         title: 'Famms',
@@ -626,8 +626,8 @@ append variables
         link: 'https://themewagon.com/themes/free-bootstrap-4-html5-responsive-financial-website-template-digitalex/',
         preview: 'https://technext.github.io/karma/index.html',
         img: 'img75.png',
-        item: 'financial',
-        category: 'Financial'
+        item: 'ecommerce',
+        category: 'E-commerce'
       },
       {
         title: 'Eden',
@@ -682,8 +682,8 @@ append variables
         link: 'https://themewagon.com/themes/creative-responsive-html5-website-template-free-download/',
         preview: 'https://technext.github.io/karmo/',
         img: 'img81.png',
-        item: '',
-        category: ''
+        item: 'portfolio',
+        category: 'Portfolio'
       },
       {
         title: 'Celestial ',
@@ -722,8 +722,8 @@ append variables
         link: 'https://themewagon.com/themes/free-bootstrap-4-html5-professional-business-website-template-cial/',
         preview: 'https://technext.github.io/cial/index.html',
         img: 'img86.png',
-        item: '',
-        category: ''
+        item: 'business',
+        category: 'Business'
       },
       {
         title: 'Ashion ',
@@ -738,8 +738,8 @@ append variables
         link: 'https://themewagon.com/themes/free-bootstrap-4-html5-responsive-musical-website-template-podcast/',
         preview: 'https://technext.github.io/podcast/index.html',
         img: 'img88.png',
-        item: 'music',
-        category: 'Music'
+        item: 'other',
+        category: 'Other'
       },
       {
         title: 'Rezume',
@@ -786,7 +786,7 @@ append variables
         link: 'https://themewagon.com/themes/free-bootstrap-4-html5-gaming-website-template-game-warrior/',
         preview: 'https://technext.github.io/game-warrior/index.html',
         img: 'img94.png',
-        item: 'anime',
+        item: 'game',
         category: 'Game & Anime'
       },
       {
@@ -794,8 +794,8 @@ append variables
         link: 'https://themewagon.com/themes/free-bootstrap-4-html5-responsive-magazine-website-template-meranda/',
         preview: 'https://technext.github.io/meranda/index.html',
         img: 'img95.png',
-        item: 'magazine',
-        category: 'Magazine'
+        item: 'photography',
+        category: 'Photography'
       },
       {
         title: 'React Reduction',
@@ -834,7 +834,7 @@ append variables
         link: 'https://themewagon.com/themes/free-bootstrap-4-html5-news-website-template-newsbox/',
         preview: 'https://technext.github.io/newsbox/index.html',
         img: 'img100.png',
-        item: 'news ',
-        category: 'News '
+        item: 'other ',
+        category: 'Other '
       }
         ];
