--- a/showcase/src/pug/mixins/common/PreFooter.pug
+++ b/showcase/src/pug/mixins/common/PreFooter.pug
@@ -45,7 +45,7 @@ mixin PreFooter
       p.text-white.fw-medium.fs-2.mb-6
         |Get the entire collection in your inbox
 
-      a.text-white.btn.btn-success.mb-5
+      a.text-white.btn.btn-success.mb-5(href="https://themewagon.com/themes/template-collection-2022-one-hundred-free-html5-templates-in-one-bundle/" target="_blank")
         i.fas.fa-download.me-3
         |Download Free
       p.mb-0.text-white.mt-6.fs--1
