--- a/showcase/src/pug/mixins/home/landing/HeroHeader.pug
+++ b/showcase/src/pug/mixins/home/landing/HeroHeader.pug
@@ -21,7 +21,7 @@ mixin HeroHeader
       h2.text-300.fw-semi-bold.fs-2.mb-1
         |HTML5 Template Collection 2022
       h2.text-white.fw-bold.fs-5.mb-0
-        |100 Pre-build Websites
+        |100 Pre-built Websites
       a.text-white.btn.btn-success.mt-3.mb-5(href="https://themewagon.com/themes/template-collection-2022-one-hundred-free-html5-templates-in-one-bundle/" target="_blank")
         i.fas.fa-download.me-3
         |Download Free
