Update template collection

--- a/showcase/src/pug/mixins/Variables.pug
+++ b/showcase/src/pug/mixins/Variables.pug
@@ -12,14 +12,6 @@ append variables
   - 
     var data = [
       {
-      title: 'Phoenix',
-      link: 'https://themewagon.com/themes/phoenix-admin-dashboard-webapp-template/',
-      preview: 'https://prium.github.io/phoenix/v1.0.0/index.html',
-      img: 'img001.png',
-      item: 'admin',
-      category: 'Admin & DashBoard'
-      },
-      {
       title: 'Elaadmin',
       link: 'https://themewagon.com/themes/free-responsive-bootstrap-4-html5-admin-dashboard-template-elaadmin/',
       preview: 'https://technext.github.io/elaadmin/index.html',
@@ -836,5 +828,14 @@ append variables
         img: 'img100.png',
         item: 'other',
         category: 'Other '
+      },
+      {
+        title: 'Feane',
+        link: 'https://themewagon.com/themes/free-bootstrap-4-html5-restaurant-website-template-feane/',
+        preview: 'https://technext.github.io/feane/',
+        img: 'img-feane.png',
+        item: 'food',
+        category: 'Food & Restaurant'
       }
-        ];
+        
+    ];
